framec_tests/language_specific/typescript/v3_outline/negative/handler_in_nonstate_block.frm
@target typescript

system S {
    machine:
        {
            e() {
                => $^
            }
        }
}

